<resources>
    <string name="app_name">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="add">Add</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_available">N/A</string>
    <string name="friend_format" formatted="false">%s is %d is %s</string>
    <string name="save">Save</string>
    <string name="error_saving_data">Error saving data</string>
    <string name="friend_added">Friend added</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="name">Name</string>
    <string name="friend_updated">Friend updated</string>
</resources>
