<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.ipd9.friendsdb.AddEditActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:max="150"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <CheckBox
        android:id="@+id/cbDogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dogs"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sbAge"
        app:layout_constraintRight_toLeftOf="@+id/cbCats"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <CheckBox
        android:id="@+id/cbCats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cats"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sbAge"
        app:layout_constraintRight_toLeftOf="@+id/cbFish"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <CheckBox
        android:id="@+id/cbFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fish"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sbAge"
        app:layout_constraintRight_toLeftOf="@+id/cbPigs"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <CheckBox
        android:id="@+id/cbPigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pigs"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sbAge"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCats"
        android:id="@+id/rgGender"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbUndeclared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_available" />
    </RadioGroup>

    <Switch
        android:id="@+id/swVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/vegetarian"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btAddSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVegetarian"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
